# dkr-msvc

./: .gitignore  CMakeLists.txt  Dockerfile
include/bar/: bar.h
src/: CMakeLists.txt  microservice.cpp
tests/bar/: test_bar.cpp
tests/foo/: test_foo.cpp
